fixed images dir path issues

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,8 +2,8 @@
 import Card from "../components/Card.astro";
 import Layout from "../layouts/Layout.astro";
 
-import logosSmall from "../images/deploy-logos-small.png";
-import logos from "../images/deploy-logos.png";
+import logosSmall from "../assets/images/deploy-logos-small.png";
+import logos from "../assets/images/deploy-logos.png";
 ---
 
 <Layout title="About Astro">
