--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,9 +11,9 @@ import logo from "../assets/images/logo.svg";
     </div>
     <nav>
       <ul>
-        <li><a href="./">Home</a></li>
-        <li><a href="./about">About</a></li>
-        <li><a href="./blog">Blog</a></li>
+        <li><a href={`${import.meta.env.BASE_URL}/`}>Home</a></li>
+        <li><a href={`${import.meta.env.BASE_URL}/about`}>About</a></li>
+        <li><a href={`${import.meta.env.BASE_URL}/blog`}>Blog</a></li>
       </ul>
     </nav>
   </div>
