gh pages testing

--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -22,7 +22,7 @@ const { Content, frontmatter } = Astro.props.post;
   <section class="page-content">
     <div class="container">
       <Card>
-        <a class="btn" href="./blog">Go Back</a>
+        <a class="btn" href={`${import.meta.env.BASE_URL}/blog`}>Go Back</a>
         <h2>{frontmatter.title}</h2>
         <div>
           Written by <strong>{frontmatter.author}</strong> on {
