--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -19,7 +19,10 @@ const posts = await Astro.glob("../posts/*.md");
               {new Date(post.frontmatter.date).toLocaleDateString()}
             </div>
             <p>{post.frontmatter.excerpt}</p>
-            <a class="btn" href={`./${post.frontmatter.slug}`}>
+            <a
+              class="btn"
+              href={`${import.meta.env.BASE_URL}/blog/${post.frontmatter.slug}`}
+            >
               Read More
             </a>
           </Card>
