--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -5,6 +5,7 @@ import Layout from "../layouts/Layout.astro";
 export async function getStaticPaths() {
   const posts = await Astro.glob("../posts/*.md");
 
+  console.log(posts);
   return posts.map((post) => ({
     params: {
       slug: post.frontmatter.slug,
@@ -22,7 +23,7 @@ const { Content, frontmatter } = Astro.props.post;
   <section class="page-content">
     <div class="container">
       <Card>
-        <a class="btn" href={`${import.meta.env.BASE_URL}/blog`}>Go Back</a>
+        <a class="btn" href={`${import.meta.env.BASE_URL}blog`}>Go Back</a>
         <h2>{frontmatter.title}</h2>
         <div>
           Written by <strong>{frontmatter.author}</strong> on {
